Fix: z-index in intro section

--- a/sass/blocks/_intro.sass
+++ b/sass/blocks/_intro.sass
@@ -5,6 +5,8 @@
   background: url(../img/intro-bg.png) no-repeat
   background-size: cover
   &-wrapper
+    position: relative
+    z-index: 100
     display: flex
     flex-direction: column
     align-items: center
